Rewrote circus page
Added a full-screen demo for circus.

--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,6 @@ collections:
     pages:
       output: true
       permalink: /:path/
+    demos:
+      output: true
+      permalink: /:path/demo
